<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <EditText
        android:id="@+id/track_name_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:inputType="textCapWords"
        android:focusable="true"
        android:contentDescription="@string/enter_track_name_desc"/>

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:contentDescription="@string/check_use_gps_desc"/>

    <CheckBox
        android:id="@+id/Location_checkBox"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_question"
        android:focusable="true"
        android:contentDescription="@string/check_use_gps_desc"/>
</LinearLayout>