<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_light"
        android:clipToPadding="false"
        android:paddingBottom="28dp"
        android:paddingLeft="@dimen/list_side_margin"
        android:paddingRight="@dimen/list_side_margin"
        android:paddingTop="?actionBarSize"
        android:scrollbarStyle="outsideOverlay" />


    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="4dp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/app_name"
                    android:textColor="@color/primary_text"
                    android:textSize="30sp"
                    android:typeface="normal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:onClick="openTrackList"
                    android:text="@string/track_list_button"
                    android:contentDescription="@string/track_list_buton_desc"
                    android:focusable="true"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/main_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@drawable/add_button"
        app:elevation="@dimen/fab_elevation"
        app:fabSize="normal"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        android:onClick="addTrackDay"
        android:focusable="true"
        android:contentDescription="@string/add_track_day_button_desc"/>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</android.support.design.widget.CoordinatorLayout>